feat(travel-server): itinerary edit routing, transit semantics and accommodation persistence (verified)
- ItineraryEditRoutingCoordinator: per-key locks, stale-baseline rejection,
  AUTO batch semantics (F1/F7)
- TransitLegSemantics + route/: manual-edit TRANSIT via agent route API
- V37/V38/V39 migrations: feasibility status relax, estimated taxi,
  accommodation status columns
- PlanningCompletedEvent/parser/mappers/services: accommodation status
  end-to-end (write/inherit/read/respond), evaluation enforcement (F4),
  money precision validation (F2)